hphp/hack/test/decl/enum_class.php.typecheck.exp
File "enum_class.php", line 7, characters 7-7:
Wrong type hint (Typing[4338])
  File "enum_class.php", line 7, characters 3-5:
  Expected `int`
  File "enum_class.php", line 12, characters 3-10:
  But got `arraykey`
  File "BuiltinEnum.hhi", line 76, characters 42-46:
    via this generic `TType`
File "enum_class.php", line 8, characters 7-7:
Wrong type hint (Typing[4338])
  File "enum_class.php", line 8, characters 3-5:
  Expected `int`
  File "enum_class.php", line 12, characters 3-10:
  But got `arraykey`
  File "BuiltinEnum.hhi", line 76, characters 42-46:
    via this generic `TType`
File "enum_class.php", line 12, characters 12-12:
Constant does not match the type of the enum it is in (Typing[4328])
  File "enum_class.php", line 11, characters 14-19:
  Expected `string`
  File "enum_class.php", line 12, characters 16-16:
  But got `int`
